[gd_scene load_steps=11 format=2]

[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://NewAccountPage.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.513726, 0.00392157, 0.509804, 1 )
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color( 0.282353, 0, 0.45098, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.384314, 0.713726, 0.380392, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 305, 234 )
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="textUsername" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 192.0
margin_right = -784.0
margin_bottom = -367.0
custom_fonts/font = SubResource( 1 )
text = "Username:"

[node name="textPassword" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -44.0
margin_right = 256.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Password:"

[node name="textClasscode" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 20.0
margin_right = 248.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Classcode:"

[node name="textWelcome" type="Label" parent="."]
visible = false
margin_left = 336.0
margin_top = 29.0
margin_right = 664.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Create Your Account"

[node name="textfields" type="Node" parent="."]

[node name="textboxUsername" type="LineEdit" parent="textfields"]
visible = false
margin_left = 256.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "Username"

[node name="textboxPassword" type="LineEdit" parent="textfields"]
visible = false
margin_left = 256.0
margin_top = 256.0
margin_right = 576.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Password"

[node name="textboxClasscode" type="LineEdit" parent="textfields"]
visible = false
margin_left = 256.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "Classcode"

[node name="buttonCreateAcc" type="Button" parent="."]
visible = false
margin_left = 296.0
margin_top = 416.0
margin_right = 525.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 4 )
text = "Create New Account"
flat = true

[node name="promptLabel" type="Label" parent="."]
margin_left = 304.0
margin_top = 64.0
margin_right = 698.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 6 )
text = "What role are you?"
align = 1

[node name="StudentButton" type="Button" parent="."]
margin_left = 376.0
margin_top = 192.0
margin_right = 592.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Student"

[node name="TeacherButton" type="Button" parent="."]
margin_left = 376.0
margin_top = 304.0
margin_right = 592.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Teacher

"
icon_align = 1

[node name="submitButton" type="Button" parent="."]
visible = false
margin_left = 376.0
margin_top = 416.0
margin_right = 592.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Submit

"
icon_align = 1

[connection signal="pressed" from="StudentButton" to="." method="_on_StudentButton_pressed"]
